--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /flask_session
 /__pycache__
 users.db
+PersonalNotes.txt 
+#Have a PersonalNotes.txt for extra notes and ideas for future, as well as input on what to do next
